# ocr-test-project

./: .gitignore  README.md  pyproject.toml
ocr/: ocr.py  text.txt
ocr/src/: imageOcr.py  image_example.py  loging.py  ocrhelper.py  pdfexample.py  preprocessing.py  processing.py
tests/: test_main.py  test_ocr.py
