[tool.poetry]
name = "ocr"
version = "0.1.0"
description = ""   
authors = ["Hayk <Hayk Hakobyan>"]

[tool.poetry.dependencies]
python = "^3.8"
opencv-python = "^4.5.3"
pytesseract = "^0.3.8"
Pillow = "^8.3.1"
matplotlib = "^3.4.2"
click = "^8.0.1"
pdf2image = "^1.16.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
ocr = "ocr.ocr:main"
